--- a/tensorflow/notebooks/Serving/serving_client.ipynb
+++ b/tensorflow/notebooks/Serving/serving_client.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simple TensorFlow Serving python client\n",
+    "---\n",
+    "\n",
+    "<font color='red'> <h3>Tested with TensorFlow 1.7</h3></font>\n",
+    "<font color='red'> <h3>Tested with Python 2.7 - TensorFlow Serving does not officially support Python3.x</h3></font>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -28,7 +39,7 @@
     "concurrency=1\n",
     "num_tests=100\n",
     "work_dir=os.getcwd()\n",
-    "server=\"host:ip\"\n",
+    "server=\"10.0.2.15:40233\"\n",
     "\n",
     "\n",
     "class _ResultCounter(object):\n",
@@ -139,18 +150,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
-   "language": "",
-   "name": "pysparkkernel"
+   "display_name": "python-demo_tensorflow_admin000__meb10000",
+   "language": "python",
+   "name": "python-demo_tensorflow_admin000__meb10000"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
+    "name": "ipython",
     "version": 2
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "pyspark",
-   "pygments_lexer": "python2"
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
