--- a/tensorflow/notebooks/Serving/train_and_export_model.ipynb
+++ b/tensorflow/notebooks/Serving/train_and_export_model.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train and export TensorFlow Serving model\n",
+    "---\n",
+    "\n",
+    "<font color='red'> <h3>Tested with TensorFlow 1.7</h3></font>\n",
+    "<font color='red'> <h3>Tested with Python 2.7 - TensorFlow Serving does not officially support Python3.x</h3></font>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -109,32 +120,27 @@
     "\n",
     "    serving.export(export_path, \"mnist\", 1)\n",
     "    \n",
-    "from hops import experiment\n",
-    "experiment.launch(spark, wrapper)"
+    "wrapper()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "PySpark",
-   "language": "",
-   "name": "pysparkkernel"
+   "display_name": "python-demo_tensorflow_admin000__meb10000",
+   "language": "python",
+   "name": "python-demo_tensorflow_admin000__meb10000"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "python",
+    "name": "ipython",
     "version": 2
    },
+   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "pyspark",
-   "pygments_lexer": "python2"
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
