--- a/tensorflow/notebooks/TensorFlow/cnn/Evolutionary_hyperparameter_search_Cifar10.ipynb
+++ b/tensorflow/notebooks/TensorFlow/cnn/Evolutionary_hyperparameter_search_Cifar10.ipynb
@@ -7,6 +7,8 @@
     "# Evolutionary Hyperparameter Optimization: Cifar-10 on Hops Notebook\n",
     "---\n",
     "\n",
+    "<font color='red'> <h3>Tested with TensorFlow 1.7</h3></font>\n",
+    "\n",
     "This is a more advanced example compared to the Fashion mnist notebook which introduces the general programming model for running TensorFlow on Hops. In this example we will look into a state-of-the-art technique for finding the optimal hyperparameters for your model.\n",
     "\n",
     "In this example program we are going to:\n",
@@ -45,37 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting Spark application\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>9165</td><td>application_1519833901858_0342</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hadoop30:8088/proxy/application_1519833901858_0342/\">Link</a></td><td><a target=\"_blank\" href=\"http://hadoop13:8042/node/containerlogs/container_e36_1519833901858_0342_01_000001/demo_tensorflow_robin_e1__robin_e0\">Link</a></td><td>✔</td></tr></table>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "SparkSession available as 'spark'.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Wrap the TensorFlow code you want to run in a function\n",
     "# To perform hyper-parameter searching define your parameters as arguments\n",
@@ -177,7 +151,7 @@
     "\n",
     "        return estim_specs\n",
     "    \n",
-    "    def data_input_fn(filenames, num_input, batch_size=1000, shuffle=False, repeat=None):\n",
+    "    def data_input_fn(filenames, num_input, batch_size=128, shuffle=False, repeat=None):\n",
     "    \n",
     "        def parser(serialized_example):\n",
     "            \"\"\"Parses a single tf.Example into image and label tensors.\"\"\"\n",
@@ -201,12 +175,12 @@
     "\n",
     "        def _input_fn():\n",
     "            # Import CIFAR10 data\n",
-    "            dataset = tf.contrib.data.TFRecordDataset(filenames)\n",
+    "            dataset = tf.data.TFRecordDataset(filenames)\n",
     "\n",
     "            # Map the parser over dataset, and batch results by up to batch_size\n",
-    "            dataset = dataset.map(parser, num_threads=1, output_buffer_size=batch_size)\n",
+    "            dataset = dataset.map(parser)\n",
     "            if shuffle:\n",
-    "                dataset = dataset.shuffle(buffer_size=256)\n",
+    "                dataset = dataset.shuffle(buffer_size=batch_size)\n",
     "            dataset = dataset.batch(batch_size)\n",
     "            dataset = dataset.repeat(repeat)\n",
     "            iterator = dataset.make_one_shot_iterator()\n",
