--- a/tensorflow/notebooks/TensorFlow/cnn/Fashion_mnist_on_hops.ipynb
+++ b/tensorflow/notebooks/TensorFlow/cnn/Fashion_mnist_on_hops.ipynb
@@ -7,11 +7,13 @@
     "# Getting started: Fashion Mnist on Hops Notebook\n",
     "---\n",
     "\n",
+    "<font color='red'> <h3>Tested with TensorFlow 1.7</h3></font>\n",
+    "\n",
     "In this notebook we are going to master running Deep Learning code on Hops using Jupyter notebooks and HopsFS, the highly efficient distributed file system that Hops provides. HopsFS is a fork of Apache HDFS and operations for reading and writing files to HopsFS is the same as with HDFS that TensorFlow supports.\n",
     "For more information about how to read from HDFS, please see: https://www.tensorflow.org/deploy/hadoop\n",
     "\n",
     "In this example program we are going to:\n",
-    "- Run Fashion M code using `tf.contrib.learn.Experiment` and `tf.estimator.Estimator`\n",
+    "- Run Fashion Mnist code using `tf.contrib.learn.Experiment` and `tf.estimator.Estimator`\n",
     "- Using the hops python library to run TensorFlow on the Hops Platform\n",
     "- Read data from a Dataset which is located in your project, on HopsFS (HDFS)\n",
     "- Define a convolutional neural network\n",
@@ -208,10 +210,10 @@
     "\n",
     "        def _input_fn():\n",
     "            # Import MNIST data\n",
-    "            dataset = tf.contrib.data.TFRecordDataset(filenames)\n",
+    "            dataset = tf.data.TFRecordDataset(filenames)\n",
     "\n",
     "            # Map the parser over dataset, and batch results by up to batch_size\n",
-    "            dataset = dataset.map(parser, num_threads=1, output_buffer_size=batch_size)\n",
+    "            dataset = dataset.map(parser)\n",
     "            if shuffle:\n",
     "                dataset = dataset.shuffle(buffer_size=128)\n",
     "            dataset = dataset.batch(batch_size)\n",
