--- a/tensorflow/notebooks/TensorFlow/gan/mnist_gan_reconstruction.ipynb
+++ b/tensorflow/notebooks/TensorFlow/gan/mnist_gan_reconstruction.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "<h1>Deep Convolutional GAN (DCGAN) and Image Reconstruction using MNIST</h1>\n",
     "\n",
@@ -29,13 +26,10 @@
     "\n",
     "<h1>Architecture</h1>\n",
     "\n",
-    "<p>The architecture of the network is described in Fig1.\n",
     "<br/>\n",
     "\n",
-    "<figure >\n",
-    "  <img src=\"../../images/network.jpg\", width = 870, height= 470>\n",
-    "  <figcaption style=\"text-align:center\">Fig1. - The network architecture for the Generator (G) and the Descriminator (D).</figcaption>\n",
-    "</figure>\n",
+    "![Image7-Monitor.png](../../images/network.jpg)\n",
+    " The network architecture for the Generator (G) and the Descriminator (D)\n",
     "\n",
     "<br/>\n",
     "<p>The following are the training details:\n",
@@ -66,11 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def wrapper(learning_rate = 0.0002, seed = 1234, beta1 = 0.5, batch_size = 100, maskType = 'center'):\n",
@@ -376,11 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from hops import util\n",
@@ -397,11 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from hops import experiment\n",
@@ -412,11 +394,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from hops import tensorboard\n",
@@ -426,36 +404,27 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "<h1>Results</h1>\n",
     "\n",
     "<h3>Image generation using DCGAN</h3>\n",
     "\n",
-    "<p>After training the algorithm for <b>20 epochs</b> the generator was able to generate images very similar to our training data as visible in Fig2. The time required to train this model for 20 epochs is about 3 days on a single CPU and 1 hour on a GPU.\n",
+    "Random images generated after 20 epochs.\n",
+    "![Image7-Monitor.png](../../images/final_grid.jpg)\n",
+    "<p>After training the algorithm for <b>20 epochs</b> the generator was able to generate images very similar to our training data. The time required to train this model for 20 epochs is about 3 days on a single CPU and 1 hour on a GPU.\n",
     "<br/>\n",
     "<br/>\n",
-    "<figure >\n",
-    "  <img src=\"../../images/final_grid.jpg\", width = 300, height= 300>\n",
-    "  <figcaption style=\"text-align:center\">Fig2. - Random images generated after 20 epochs.</figcaption>\n",
-    "</figure>\n",
+    "We can see the <b>generator and the discriminator losses</b> evaluated on the validation set every 100 iteration. (On the y axis we have the loss while on the x axis we have the iteration number, and every 550 iteration correspond to 1 epoch since we use a batch size of 100 and the training dataset consists of 55000 images).<br/><br/>\n",
+    "    \n",
+    "![Image7-Monitor.png](../../images/DCGAN_Mnist_tensorboard_scalars_50kIter.jpg)\n",
     "<br/>\n",
-    "In Fig3. we can see the <b>generator and the discriminator losses</b> evaluated on the validation set every 100 iteration. (On the y axis we have the loss while on the x axis we have the iteration number, and every 550 iteration correspond to 1 epoch since we use a batch size of 100 and the training dataset consists of 55000 images).<br/><br/>\n",
-    "<figure >\n",
-    "  <img src=\"../../images/DCGAN_Mnist_tensorboard_scalars_50kIter.jpg\", width = 1000, height= 400>\n",
-    "  <figcaption style=\"text-align:center\">Fig3. - Discriminator and Generator losses.</figcaption>\n",
-    "</figure>\n",
+    "We can also observe that the generator starts to generate quite good images after few iteration and then it try to continue to improve the images with a lot of <b>oscillations without converging to a fixed solution</b>. We can observe how the generated images evolve at each epoch. (Note that at epoch 7 the generated images are random pixels even if before we collected images similar to numbers and after the generator start again to generate good images). The following image shows the 10 epochs image generation process. <br/><br/>\n",
+    "\n",
+    "![Image7-Monitor.png](../../images/gif_speed_low.gif)\n",
+    "\n",
     "<br/>\n",
-    "We can also observe that the generator starts to generate quite good images after few iteration and then it try to continue to improve the images with a lot of <b>oscillations without converging to a fixed solution</b>. In Fig4. we can observe how the generated images evolve at each epoch. (Note that at epoch 7 the generated images are random pixels even if before we collected images similar to numbers and after the generator start again to generate good images) <br/><br/>\n",
-    "<figure >\n",
-    "  <img src=\"../../images/gif_speed_low.gif\", width = 300, height= 300>\n",
-    "  <figcaption style=\"text-align:center\">Fig4. - 10 epochs image generation process.</figcaption>\n",
-    "</figure>\n",
-    "<br/>\n",
-    "Finally we did <b>hyperparameter tuning</b> and we obteined the following results:\n",
+    "Finally we did <b>hyperparameter tuning</b> and we obtained the following results:\n",
     "<ul>\n",
     "<li>No clear difference in using a Learning Rate of 0.0005 or 0.0002, probably due to the fact that we used Adam Optimizer that automatically adapt the learning rate for each parameter,</li>\n",
     "<li>The Momentum parameter <i>beta1</i> set to 0.5 helps in reducing the oscillations during training compared to 0.9,</li>\n",
@@ -468,124 +437,18 @@
     "<h3>Image Reconstruction</h3>\n",
     "\n",
     "The objective is <b>to reconstruct an image that contains missing pixels</b>. In order to do that we use the generator of the previous step, we give as input an array of 100 random pixels and finally we do Adam Optimization to adjust the input to produce an image that is able to reconstruct the missing pixels.\n",
-    "In Fig5. we can see the results of these reconstruction, in the first column there is the image before the pixels were deleted, in the second column the masked image and in the third the reconstructed image.\n",
+    "In the following figure, we can see the results of these reconstruction, in the first column there is the image before the pixels were deleted, in the second column the masked image and in the third the reconstructed image.\n",
     "<br/>\n",
-    "<figure >\n",
-    "  <img src=\"../../images/res.jpg\", width = 700, height= 1200>\n",
-    "  <figcaption style=\"text-align:center\">Fig5. - Before, masked and reconstructed images.</figcaption>\n",
-    "</figure>\n",
-    "<br/>\n",
-    "<br/>\n",
-    "Also, we can observe in Fig6. how the network is able <b>to adjust the input parameter to find the best matching</b>.\n",
-    "<br/>\n",
-    "<br/>\n",
-    "<figure >\n",
-    "  <img src=\"../../images/center.gif\", width = 200>\n",
-    "  <figcaption style=\"text-align:center\">Fig6. - Reconstruction process.</figcaption>\n",
-    "</figure>\n",
-    "<br/>\n",
-    "<br/>\n",
-    "Finally, as shown in Fig7. we can see that the reconstruction works for <b>arbitrarly types of mask</b> or missing pixels. \n",
-    "<br/>\n",
-    "<br/>\n",
-    "<div class=\"row\" style=\"  display: flex; flex-wrap: wrap; padding: 0% 2%\"> \n",
     "\n",
-    "  \n",
-    "    <div class=\"column\" style=\" flex: 50%; padding: 0 4px\">\n",
-    "<img src=\"../../images/before_4.png\", width = 150, style=\"vertical-align: middle\">\n",
-    "<img src=\"../../images/left_before_3.png\", width = 150, style=\"vertical-align: middle\">\n",
-    "  </div>\n",
-    "  <div class=\"column\" style=\"flex: 50%; padding: 0 40px 0 0\">\n",
-    "    <img src=\"../../images/random_before_3.png\", width = 150, style=\"vertical-align: middle\">\n",
-    "    <img src=\"../../images/grid_before_9.png\", width = 150, style=\"vertical-align: middle\">\n",
-    "\n",
-    "  </div>\n",
-    "\n",
-    "<div class=\"column\" style=\" flex: 50%; padding: 0 4px\">\n",
-    "<img src=\"../../images/masked_4.png\", width = 150, style=\"vertical-align: middle\">\n",
-    "<img src=\"../../images/left_masked_3.png\", width = 150, style=\"vertical-align: middle\">\n",
-    "  </div>\n",
-    "  <div class=\"column\" style=\"flex: 50%; padding: 0 40px 0 0px\">\n",
-    "    <img src=\"../../images/random_masked_3.png\", width = 150, style=\"vertical-align: middle\">\n",
-    "    <img src=\"../../images/grid_masked_9.png\", width = 150, style=\"vertical-align: middle\">\n",
-    "\n",
-    "  </div> \n",
-    "  \n",
-    "  <div class=\"column\" style=\" flex: 50%; padding: 0 4px\">\n",
-    "<img src=\"../../images/center.gif\", width = 150, style=\"vertical-align: middle\">\n",
-    "<img src=\"../../images/left.gif\", width = 150, style=\"vertical-align: middle\">\n",
-    "  </div>\n",
-    "  <div class=\"column\" style=\"flex: 50%; padding: 0 40px 0 0px\">\n",
-    "    <img src=\"../../images/random.gif\", width = 150, style=\"vertical-align: middle\">\n",
-    "    <img src=\"../../images/grid.gif\", width = 150, style=\"vertical-align: middle\">\n",
-    "</div> \n",
-    "\n",
-    "</div> <br/><div style=\"  text-align: center\">Fig.7 Center masked, left masked, random masked and grid masked process.</div>\n",
-    "\n",
-    "\n"
+    "![Image7-Monitor.png](../../images/res.jpg)\n",
+    "<br/>\n",
+    "![Image7-Monitor.png](../../images/center.gif)\n",
+    "<br/>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "###### <h1>Future work</h1>\n",
-    "\n",
-    "<p>\n",
-    "To develop the DCGAN and Image Reconstruction Project we used an incremental approach.<br>\n",
-    "First, we decided to realize an Image generator using DCGAN and then use this generator to reconstruct missing parts of the images. For computational reasons we decided to start using the MNIST dataset, however our architecture can be trained over larger and more complex dataset with only few changes (eg. number of input/output channles) as shown in the following examples. \n",
-    "<br>\n",
-    "\n",
-    "<h3>Image generation using DCGAN </h3>\n",
-    "\n",
-    "<br>\n",
-    "The authors of the original DCGAN paper [1] \"Unsupervised Representation Learning With Deep Convolutional\n",
-    "Generative Adversarial Networks\" had good results using as training dataset face images obtained from random image queries on Google.\n",
-    "\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<figure >\n",
-    "  <img src=\"../../images/DCGAN_CelebA.png\", width = 750, height= 500>\n",
-    "  <figcaption style=\"text-align:center\">Fig8. - Results of face generation from original DCGAN paper (taken from [1]).</figcaption>\n",
-    "</figure>\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "<h3>Image reconstruction using DCGAN </h3>\n",
-    "\n",
-    "<br>\n",
-    "Raymond Yeh and Chen Chen shown in their paper [4], “Semantic Image Inpainting with Perceptual and Contextual Losses”, how to use DCGAN to complete missing parts of images.\n",
-    "\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "<figure >\n",
-    "  <img src=\"../../images/faces_reconstruction.png\", width = 560, height= 500>\n",
-    "  <figcaption style=\"text-align:center\">Fig9. - Image reconstruction on faces (taken from [4]).</figcaption>\n",
-    "</figure>\n",
-    "\n",
-    "<br>\n",
-    "<br>\n",
-    "<br>\n",
-    "\n",
-    "<figure >\n",
-    "  <img src=\"../../images/cars_reconstruction.png\", width = 560, height= 500>\n",
-    "  <figcaption style=\"text-align:center\">Fig10. - Image reconstruction on cars (taken from [4]).</figcaption>\n",
-    "</figure>\n",
-    "</p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "\n",
     "<h1>References</h1>\n",
@@ -597,17 +460,6 @@
     "  <li>Raymond A. Yeh, Chen Chen, Teck Yian Lim, Alexander G. Schwing, Mark Hasegawa-Johnson, Minh N. Do. \"Semantic Image Inpainting with Deep Generative Models\". arXiv preprint arXiv:1607.07539 (2017). (Full paper: https://arxiv.org/pdf/1607.07539.pdf)</li>\n",
     "</ol>"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
