--- a/tensorflow/notebooks/TensorFlowOnSpark/tfos_mnist.ipynb
+++ b/tensorflow/notebooks/TensorFlowOnSpark/tfos_mnist.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "<font color='red'> <h3>Before running this notebook, you need to run the [Mnist Preprocessing Notebook](tfos_mnist_preprocessing.ipynb)</h3></font>\n",
     "\n",
+    "<font color='red'> <h3>Tested with TensorFlow 1.7</h3></font>\n",
+    "\n",
     "In this notebook we are going to master running TensorFlowOnSpark on Hops, Jupyter notebooks and HopsFS, the highly efficient distributed file system that Hops provides. HopsFS is a fork of Apache HDFS and operations for reading and writing files to HopsFS is the same as with HDFS that TensorFlow supports.\n",
     "\n",
     "For more information about how to read from HDFS, please see: https://www.tensorflow.org/deploy/hadoop\n",
@@ -51,7 +53,7 @@
    "source": [
     "## The TFCluster API\n",
     "\n",
-    "The `TFCluster` python module is used to launch the actual TensorFlowOnSpark program. It is similar to `tflauncher` in the sense that a wrapper function needs to be created that contains all the TensorFlow code.\n",
+    "The `TFCluster` python module is used to launch the actual TensorFlowOnSpark program. It is similar to the `experiment` module in the sense that a wrapper function needs to be created that contains all the TensorFlow code.\n",
     "\n",
     "Please see the following links for information on the programming model:\n",
     "\n",
@@ -95,9 +97,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>5</td><td>application_1523194678331_0006</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0:8088/proxy/application_1523194678331_0006/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0:8042/node/containerlogs/container_e01_1523194678331_0006_01_000001/demo_tensorflow_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
     "def mnist_fun(args, ctx):\n",
     "    \n",
