--- a/tensorflow/notebooks/TensorFlowOnSpark/tfos_mnist_preprocessing.ipynb
+++ b/tensorflow/notebooks/TensorFlowOnSpark/tfos_mnist_preprocessing.ipynb
@@ -99,7 +99,9 @@
     "\n",
     "When the Jupyter notebook server is started, it is possible to supply dependencies that should be accessible by your program, this could be .jars, or archives which should be automatically unzipped like .zip or .tgz, or one or more .py files which may or may not be encased in a .zip or .egg file.\n",
     "\n",
-    "To demonstrate this you will need to restart Jupyter and add the mnist.zip as an archive in the Jupyter configuration.\n"
+    "To demonstrate this you will need to restart Jupyter and add the mnist.zip as an archive in the Jupyter configuration.\n",
+    "\n",
+    "![Image9-Logs.png](../images/cluster_setup.png)\n"
    ]
   },
   {
@@ -108,7 +110,7 @@
    "source": [
     "## The conversion python code\n",
     "\n",
-    "This code defines the conversion"
+    "This code reads the mnist.zip file and converts it to specified output format. In this case csv files."
    ]
   },
   {
