Notebook updates, including eager execution, TensorBoard debugger, TFoS estimator, PyTorch differential evolution, and other improvements

--- a/tensorflow/notebooks/PyTorch/mnist.ipynb
+++ b/tensorflow/notebooks/PyTorch/mnist.ipynb
@@ -7,17 +7,45 @@
     "# Simple PyTorch example\n",
     "---\n",
     "\n",
-    "<font color='red'> <h3>Tested with pytorch 0.3.1</h3></font>\n",
+    "<font color='red'> <h3>Tested with pytorch 0.3.0</h3></font>\n",
     "<font color='red'> <h3>Tested with torchvision 0.2.0</h3></font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting Spark application\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>13</td><td>application_1522241157877_0014</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0:8088/proxy/application_1522241157877_0014/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0:8042/node/containerlogs/container_e01_1522241157877_0014_01_000001/testproj__meb10000\">Link</a></td><td>✔</td></tr></table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SparkSession available as 'spark'.\n"
+     ]
+    }
+   ],
    "source": [
-    "def wrapper():\n",
+    "def pytorch_mnist(epochs, lr, momentum):\n",
     "    import argparse\n",
     "    import torch\n",
     "    import torch.nn as nn\n",
@@ -25,47 +53,49 @@
     "    import torch.optim as optim\n",
     "    from torchvision import datasets, transforms\n",
     "    from torch.autograd import Variable\n",
+    "    \n",
+    "    import os\n",
+    "    from hops import hdfs\n",
+    "    from hops import devices\n",
+    "    \n",
+    "    batch_size = 64    \n",
+    "    test_batch_size = 1000    \n",
+    "    epochs = 10\n",
+    "    lr = 0.01    \n",
+    "    momentum = 0.5    \n",
+    "    cuda = devices.get_num_gpus() > 0\n",
+    "    seed = 1\n",
+    "    log_interval = 10\n",
     "\n",
-    "    # Training settings\n",
-    "    parser = argparse.ArgumentParser(description='PyTorch MNIST Example')\n",
-    "    parser.add_argument('--batch-size', type=int, default=64, metavar='N',\n",
-    "                        help='input batch size for training (default: 64)')\n",
-    "    parser.add_argument('--test-batch-size', type=int, default=1000, metavar='N',\n",
-    "                        help='input batch size for testing (default: 1000)')\n",
-    "    parser.add_argument('--epochs', type=int, default=10, metavar='N',\n",
-    "                        help='number of epochs to train (default: 10)')\n",
-    "    parser.add_argument('--lr', type=float, default=0.01, metavar='LR',\n",
-    "                        help='learning rate (default: 0.01)')\n",
-    "    parser.add_argument('--momentum', type=float, default=0.5, metavar='M',\n",
-    "                        help='SGD momentum (default: 0.5)')\n",
-    "    parser.add_argument('--no-cuda', action='store_true', default=False,\n",
-    "                        help='disables CUDA training')\n",
-    "    parser.add_argument('--seed', type=int, default=1, metavar='S',\n",
-    "                        help='random seed (default: 1)')\n",
-    "    parser.add_argument('--log-interval', type=int, default=10, metavar='N',\n",
-    "                        help='how many batches to wait before logging training status')\n",
-    "    args = parser.parse_args()\n",
-    "    args.cuda = not args.no_cuda and torch.cuda.is_available()\n",
+    "    torch.manual_seed(seed)\n",
+    "    if cuda:\n",
+    "        torch.cuda.manual_seed(seed)\n",
+    "    \n",
+    "    \n",
+    "    # Copy dataset from project to current working directory\n",
+    "    if not os.path.exists(os.getcwd() + '/processed'):\n",
+    "        hdfs.log('----Downloading dataset to Spark executor working directory----')\n",
+    "        # copy_from_project OPTIONAL FLAGS:\n",
+    "        # overwrite: (default false) overwrite the destination path\n",
+    "        # project: (default current project) copy dataset from a different project\n",
+    "        hdfs.copy_from_project('TestJob/data/mnist/processed', '')\n",
+    "        hdfs.log('----------------------Download finished------------------------')\n",
     "\n",
-    "    torch.manual_seed(args.seed)\n",
-    "    if args.cuda:\n",
-    "        torch.cuda.manual_seed(args.seed)\n",
-    "\n",
-    "\n",
-    "    kwargs = {'num_workers': 1, 'pin_memory': True} if args.cuda else {}\n",
+    "    kwargs = {'num_workers': 1, 'pin_memory': True} if cuda else {}\n",
     "    train_loader = torch.utils.data.DataLoader(\n",
-    "        datasets.MNIST('../data', train=True, download=True,\n",
+    "        datasets.MNIST(os.getcwd(), train=True, download=False,\n",
     "                       transform=transforms.Compose([\n",
     "                           transforms.ToTensor(),\n",
     "                           transforms.Normalize((0.1307,), (0.3081,))\n",
     "                       ])),\n",
-    "        batch_size=args.batch_size, shuffle=True, **kwargs)\n",
+    "        batch_size=batch_size, shuffle=True, **kwargs)\n",
     "    test_loader = torch.utils.data.DataLoader(\n",
-    "        datasets.MNIST('../data', train=False, transform=transforms.Compose([\n",
+    "        datasets.MNIST(os.getcwd(), train=False, download=False, \n",
+    "                       transform=transforms.Compose([\n",
     "                           transforms.ToTensor(),\n",
     "                           transforms.Normalize((0.1307,), (0.3081,))\n",
     "                       ])),\n",
-    "        batch_size=args.test_batch_size, shuffle=True, **kwargs)\n",
+    "        batch_size=test_batch_size, shuffle=True, **kwargs)\n",
     "\n",
     "\n",
     "    class Net(nn.Module):\n",
@@ -87,15 +117,15 @@
     "            return F.log_softmax(x)\n",
     "\n",
     "    model = Net()\n",
-    "    if args.cuda:\n",
+    "    if cuda:\n",
     "        model.cuda()\n",
     "\n",
-    "    optimizer = optim.SGD(model.parameters(), lr=args.lr, momentum=args.momentum)\n",
+    "    optimizer = optim.SGD(model.parameters(), lr=lr, momentum=momentum)\n",
     "\n",
     "    def train(epoch):\n",
     "        model.train()\n",
     "        for batch_idx, (data, target) in enumerate(train_loader):\n",
-    "            if args.cuda:\n",
+    "            if cuda:\n",
     "                data, target = data.cuda(), target.cuda()\n",
     "            data, target = Variable(data), Variable(target)\n",
     "            optimizer.zero_grad()\n",
@@ -103,7 +133,7 @@
     "            loss = F.nll_loss(output, target)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "            if batch_idx % args.log_interval == 0:\n",
+    "            if batch_idx % log_interval == 0:\n",
     "                print('Train Epoch: {} [{}/{} ({:.0f}%)]\\tLoss: {:.6f}'.format(\n",
     "                    epoch, batch_idx * len(data), len(train_loader.dataset),\n",
     "                    100. * batch_idx / len(train_loader), loss.data[0]))\n",
@@ -113,7 +143,7 @@
     "        test_loss = 0\n",
     "        correct = 0\n",
     "        for data, target in test_loader:\n",
-    "            if args.cuda:\n",
+    "            if cuda:\n",
     "                data, target = data.cuda(), target.cuda()\n",
     "            data, target = Variable(data, volatile=True), Variable(target)\n",
     "            output = model(data)\n",
@@ -122,14 +152,31 @@
     "            correct += pred.eq(target.data.view_as(pred)).cpu().sum()\n",
     "\n",
     "        test_loss /= len(test_loader.dataset)\n",
-    "        print('\\nTest set: Average loss: {:.4f}, Accuracy: {}/{} ({:.0f}%)\\n'.format(\n",
-    "            test_loss, correct, len(test_loader.dataset),\n",
+    "        accuracy = correct / len(test_loader.dataset)\n",
+    "        print('\\nTest set: Average loss: {:.4f}, Accuracy: {:.4f} ({:.0f}%)\\n'.format(\n",
+    "            test_loss, accuracy,\n",
     "            100. * correct / len(test_loader.dataset)))\n",
+    "        \n",
+    "        return accuracy\n",
     "\n",
-    "\n",
-    "    for epoch in range(1, args.epochs + 1):\n",
+    "    accuracy = 0\n",
+    "    for epoch in range(1, epochs + 1):\n",
     "        train(epoch)\n",
-    "        test()"
+    "        accuracy = test()        \n",
+    "        \n",
+    "    hdfs.log('Epoch: ' + str(epoch) + ' ----- Accuracy: ' + str(accuracy))\n",
+    "    \n",
+    "    return accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define hyperparameter search space\n",
+    "args = {'epochs': [1, 20], 'lr': [0.005, 0.05], 'momentum': [0.1, 0.9]}"
    ]
   },
   {
@@ -139,7 +186,8 @@
    "outputs": [],
    "source": [
     "from hops import experiment\n",
-    "experiment.launch(spark, wrapper)"
+    "# Run differential evolution with default parameters\n",
+    "experiment.evolutionary_search(spark, pytorch_mnist, args)"
    ]
   }
  ],
